--- a/app/assets/javascripts/environment.js.erb
+++ b/app/assets/javascripts/environment.js.erb
@@ -29,12 +29,15 @@ $(document).ready(function(){
   //On click event for "Save environment" in Save Environment modal
   $('.graph-save-submit').click(function(){
     var graphName = $('input#graph-name').val().trim();
+    var keyPairName = $('input#graph-key-pair-name').val().trim();
+    var securityGroupName = $('input#graph-security-group-name').val().trim();
     if(graphName == "")
       addMessagesToDiv($('#graph-save-error-messages'), getErrorMessage('Environment name cannot be empty'));
     else
     {
+      var attributes = { name: graphName, key_pair_name: keyPairName, security_group: securityGroupName };
       $('#graph-save-modal').modal('hide');
-      $('.graph-area').graphArea("save", graphName);
+      $('.graph-area').graphArea("save", attributes);
     }
     //Do not submit form
     return false;
@@ -66,13 +69,15 @@ $(document).ready(function(){
 $(function() {
  if($('.stack-status').length != 0)
  {
-  var environment_id = $('.stack-status').attr("data-graph-id");
-  setInterval(function(){
-    $.ajax({
-      url: '/environment_status?id='+environment_id,
-      type: 'GET'
-    });
-  }, 6000);
+    $('.stack-status').each(function(){
+    var environment_id = $(this).attr("data-graph-id");
+    setInterval(function(){
+      $.ajax({
+        url: '/environment_status?id='+environment_id,
+        type: 'GET'
+      });
+    }, <%= VisualCloudConfig[:status_check_interval] * 1000 %>);
+  });
  }
 });
 
