--- a/app/views/environments/edit.html.erb
+++ b/app/views/environments/edit.html.erb
@@ -16,11 +16,13 @@
     var ypos = <%= instance.ypos %> ;
     var parents = <%= instance.parents.collect(&:id) %> ;
     var instanceId= <%= instance.id %>
+    var ipAddress = '<%= instance.private_ip %>';
+    var publicDNS = '<%= instance.public_dns %>';
     var amiId = <%= instance.ami_id.nil? ? 'null' : instance.ami_id %>;
     var instanceType = <%= instance.instance_type_id.nil? ? 'null' : instance.instance_type_id %>;
     var configAttributes = JSON.parse('<%= instance.config_attributes.html_safe %>');
     var newInstance = addInstanceCloneToGraph(instanceId);
-    newInstance.instance({xpos: xpos, ypos: ypos, label: label, resourceType: resourceType, amiId: amiId, InstanceType:instanceType, instanceId: instanceId,configAttributes:configAttributes});
+    newInstance.instance({xpos: xpos, ypos: ypos, label: label, resourceType: resourceType, amiId: amiId, InstanceType:instanceType, instanceId: instanceId,configAttributes:configAttributes,ipAddress:ipAddress,publicDNS:publicDNS});
     instances[instanceId] = { instance: newInstance, parents: parents,configAttributes:configAttributes };
   <% end %>
   //Loads saved connections
