Show IP, DNS for provisioned instances

--- a/app/assets/javascripts/default.js.erb
+++ b/app/assets/javascripts/default.js.erb
@@ -32,8 +32,12 @@ function showInstanceEditForm(editElement){
   dialog.find('#rails_instance_type_id').val(instanceOptions.InstanceType);
   dialog.find('#mysql_instance_type_id').val(instanceOptions.InstanceType);
   dialog.find('#nginx_instance_type_id').val(instanceOptions.InstanceType);
-  dialog.find('#ip_address').html("Ip Address : "+instanceOptions.ipAddress);
-  dialog.find('#public_dns').html("Public DNS : "+instanceOptions.publicDNS);
+  if(instanceOptions.ipAddress != undefined){
+    dialog.find('#ip_address').html("Ip Address : "+instanceOptions.ipAddress);
+  }
+  if(instanceOptions.publicDNS != undefined){
+    dialog.find('#public_dns').html("Public DNS : "+instanceOptions.publicDNS);
+  }
   if(!isEmpty(instanceOptions.configAttributes))
   {
      dialog.find('#rds_size').val(instanceOptions.configAttributes.size);
