--- a/app/views/projects/_project_environments.html.erb
+++ b/app/views/projects/_project_environments.html.erb
@@ -11,7 +11,7 @@
     <% @environments.each do |environment| %>
       <tr>
         <% status = environment.status(current_user.aws_access_key, current_user.aws_secret_key) %>
-        <td style="text-align: center;"><div class="stack-status" data-graph-id="<%=environment.id%>" href="javascript:void(0);"><%= image_tag(status_image(status)["img_src"], title: "#{status_image(status)["img_title"]}", rel: 'tooltip', id: "stack-status-image-#{environment.id}") %></div></td>
+        <td style="text-align: center;"><div class="stack-status" data-graph-id="<%=environment.id%>"><%= image_tag(status_image(status)["img_src"], title: "#{status_image(status)["img_title"]}", rel: 'tooltip', id: "stack-status-image-#{environment.id}") %></div></td>
         <td><%= environment.name %></td>
         <td><%= text_field_tag 'branch' ,environment.branch, id: "branch_#{environment.id}" %></td>
         <td><%= check_box_tag 'db_migrate','',environment.db_migrate, id: "db_migrate_#{environment.id}" %></td>
