--- a/app/views/environments/_edit_toolbar.html.erb
+++ b/app/views/environments/_edit_toolbar.html.erb
@@ -3,8 +3,8 @@
     <li><a id="graph-update" data-graph-id="<%=@environment.id%>" href="javascript:void(0)">Save</a></li>
     <li><a id="graph-provision" data-graph-id="<%=@environment.id%>" href="javascript:void(0)">Provision</a></li>
     <li><a id="graph-save" href="javascript:void(0)">Replicate</a></li>
-    <% status = @environment.status(current_user.aws_access_key, current_user.aws_secret_key) %>
-    <li><a class="stack-status" data-graph-id="<%=@environment.id%>" href="javascript:void(0);"><%= image_tag(status_image(status)["img_src"], title: "#{status_image(status)["img_title"]}", rel: 'tooltip', id: "stack-status-image-#{@environment.id}") %></a></li>
+    <%# status = @environment.status(current_user.aws_access_key, current_user.aws_secret_key) %>
+    <li><a class="stack-status" data-graph-id="<%=@environment.id%>" href="javascript:void(0);"><%= image_tag(status_image(@environment.provision_status)["img_src"], title: "#{status_image(@environment.provision_status)["img_title"]}", rel: 'tooltip', id: "stack-status-image-#{@environment.id}") %></a></li>
   </ul> 
   <%= render 'project_environment' %> 
 </div>
