A dark bootstrap theme

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -14,12 +14,12 @@
 */
 
 div.graph-area {
-  background-image:image-url('tiny_grid.png');
+  //background-image:image-url('tiny_grid.png');
   height: 400px;
 }
 
 div.graph-draggables-dock {
-  background-color: white;
+  //background-color: white;
   height: 400px;
 }
 
