--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,9 +10,9 @@
     <%= yield(:head) %>
   </head>
   <body data-offset="10" data-target=".navbar" data-spy="scroll">
-    <header class="navbar navbar-fixed-top">
+    <header class="navbar navbar-fixed-top navbar-inverse">
       <nav class="navbar-inner">
-        <div class="container">
+        <div class="container header-content">
           <%= render 'layouts/navigation' %>
         </div>
       </nav>
