--- a/app/views/environments/_dialogs.html.erb
+++ b/app/views/environments/_dialogs.html.erb
@@ -13,7 +13,7 @@
   </div>  
   <div class="modal-footer">  
     <%= f.button :submit, 'Save Environment', class: "btn btn-success graph-save-submit" %>
-    <a href="#" class="btn" data-dismiss="modal">Close</a>  
+    <a href="#" class="btn btn-inverse" data-dismiss="modal">Close</a>  
   </div>  
     <% end %>
 </div>  
@@ -59,7 +59,7 @@
   </div>  
   <div class="modal-footer">  
     <%= f.button :submit, 'Apply', class: "btn btn-success instance-config-submit" %>
-    <a href="#" class="btn" data-dismiss="modal">Close</a>  
+    <a href="#" class="btn btn-inverse" data-dismiss="modal">Close</a>  
   </div>  
     <% end %>
 </div>
@@ -85,7 +85,7 @@
   </div>
   <div class="modal-footer">
     <%= f.button :submit, 'Apply', class: "btn btn-success instance-config-submit" %>
-    <a href="#" class="btn" data-dismiss="modal">Close</a>
+    <a href="#" class="btn btn-inverse" data-dismiss="modal">Close</a>
   </div>
     <% end %>
 </div>
@@ -111,7 +111,7 @@
   </div>
   <div class="modal-footer">
     <%= f.button :submit, 'Apply', class: "btn btn-success instance-config-submit" %>
-    <a href="#" class="btn" data-dismiss="modal">Close</a>
+    <a href="#" class="btn btn-inverse" data-dismiss="modal">Close</a>
   </div>
     <% end %>
 </div>
@@ -137,7 +137,7 @@
   </div>
   <div class="modal-footer">
     <%= f.button :submit, 'Apply', class: "btn btn-success instance-config-submit" %>
-    <a href="#" class="btn" data-dismiss="modal">Close</a>
+    <a href="#" class="btn btn-inverse" data-dismiss="modal">Close</a>
   </div>
     <% end %>
 </div>
@@ -163,7 +163,7 @@
   </div>
   <div class="modal-footer">
     <%= f.button :submit, 'Apply', class: "btn btn-success instance-config-submit" %>
-    <a href="#" class="btn" data-dismiss="modal">Close</a>
+    <a href="#" class="btn btn-inverse" data-dismiss="modal">Close</a>
   </div>
     <% end %>
 </div>
@@ -189,7 +189,7 @@
   </div>
   <div class="modal-footer">
     <%= f.button :submit, 'Apply', class: "btn btn-success instance-config-submit" %>
-    <a href="#" class="btn" data-dismiss="modal">Close</a>
+    <a href="#" class="btn btn-inverse" data-dismiss="modal">Close</a>
   </div>
     <% end %>
 </div>
@@ -225,7 +225,7 @@
   </div>
   <div class="modal-footer">
     <%= f.button :submit, 'Apply', class: "btn btn-success instance-config-submit" %>
-    <a href="#" class="btn" data-dismiss="modal">Close</a>  
+    <a href="#" class="btn btn-inverse" data-dismiss="modal">Close</a>  
   </div>
   <% end %>
 </div>  
@@ -247,7 +247,7 @@
   </div>
   <div class="modal-footer">
     <%= f.button :submit, 'Apply', class: "btn btn-success instance-config-submit" %>
-    <a href="#" class="btn" data-dismiss="modal">Close</a>  
+    <a href="#" class="btn btn-inverse" data-dismiss="modal">Close</a>  
   </div>
   <% end %>
 </div>  
@@ -266,7 +266,7 @@
   </div>
   <div class="modal-footer">
     <%= f.button :submit, 'Apply', class: "btn btn-success instance-config-submit" %>
-    <a href="#" class="btn" data-dismiss="modal">Close</a>
+    <a href="#" class="btn btn-inverse" data-dismiss="modal">Close</a>
   </div>
   <% end %>
 </div>
@@ -284,7 +284,7 @@
   </div>
   <div class="modal-footer">
     <%= f.button :submit, 'Apply', class: "btn btn-success instance-config-submit" %>
-    <a href="#" class="btn" data-dismiss="modal">Close</a>
+    <a href="#" class="btn btn-inverse" data-dismiss="modal">Close</a>
   </div>
   <% end %>
 </div>
