--- a/app/views/projects/edit.html.erb
+++ b/app/views/projects/edit.html.erb
@@ -1,6 +1,6 @@
 <h1>Edit Project</h1>
-<div style="float:right;">
-<%= link_to 'Show Project', @project ,:class=>"btn"%>
-<%= link_to 'All Projects', projects_path ,:class=>"btn"%></div>
+<div class="pull-right">
+<%= link_to 'Show Project', @project ,:class=>"btn btn-inverse"%>
+<%= link_to 'All Projects', projects_path ,:class=>"btn btn-inverse"%></div>
 <br/><br/>
 <%= render 'form' %>
