--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -13,8 +13,8 @@
       <% @projects.each do |project| %>
         <tr>
           <td><%= link_to project.name , project_path(project) ,:class=>'btn-link' ,:style=>"text-decoration:none;",:title=>"Show details of the project" %></td>
-          <td  style="text-align: center;"><%= link_to 'Edit', edit_project_path(project) ,:class=>'btn'%>&nbsp;&nbsp;&nbsp;&nbsp;
-          <%= link_to 'Delete', project ,:class=>'btn', method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          <td  style="text-align: center;"><%= link_to 'Edit', edit_project_path(project) ,:class=>'btn btn-inverse'%>&nbsp;&nbsp;&nbsp;&nbsp;
+          <%= link_to 'Delete', project ,:class=>'btn btn-inverse', method: :delete, data: { confirm: 'Are you sure?' } %></td>
         </tr>
       <% end %>
     <%else%>
@@ -23,4 +23,4 @@
   </tbody>
 </table>
 <br />
-<%= link_to 'New Project', new_project_path  ,:class=>'btn' %>
+<%= link_to 'New Project', new_project_path  ,:class=>'btn btn-inverse' %>
