--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -1,5 +1,5 @@
 <h1>New project</h1>
 <div style="float:right;">
-<%= link_to 'All Projects', projects_path ,:class=>"btn"%></div>
+<%= link_to 'All Projects', projects_path ,:class=>"btn btn-inverse"%></div>
 <br/><br/>
 <%= render 'form' %>
