--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -11,13 +11,8 @@
   <% end %>
   <% if user_signed_in? %>
     <li>
-    <%= link_to 'Edit Account', edit_user_registration_path %>
+    <%= link_to 'Settings', edit_user_registration_path %>
     </li>
-    <% if current_user.has_role? :admin %>
-      <li>
-      <%= link_to 'Admin', users_path %>
-      </li>
-    <% end %>
   <% else %>
     <li>
     <%= link_to 'Sign Up', new_user_registration_path %>
