small ui changes for tooltip placement

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -471,4 +471,7 @@ body {
     width:160px;
     font-size:12px;
 }
+.thumbnails img , .graph-area img{
+background-color:#fff;
+}
 //@import "bootstrap-responsive";
