--- a/app/views/environments/_dialogs.html.erb
+++ b/app/views/environments/_dialogs.html.erb
@@ -7,9 +7,9 @@
   <div class="modal-body">  
     <div id="graph-save-error-messages"></div>
     <%= simple_form_for Environment.new, url: project_environments_path(project)  , remote: true, html: { id: 'graph-save-frm'} do |f|%>
-      <%= f.input :name, input_html: { id: 'graph-name', title: 'Name of your environment. Example: production, staging etc.', rel: 'tooltip'} %>
-      <%= f.input :key_pair_name, input_html: { id: 'graph-key-pair-name', title: 'The name of the key pair to login to your instances', rel: 'tooltip'} %>
-      <%= f.input :security_group, input_html: { id: 'graph-security-group-name', title: 'Give a name for the security group.', rel: 'tooltip'} %>
+      <%= f.input :name, input_html: { id: 'graph-name', title: 'Name of your environment. Example: production, staging etc.', rel: 'tooltip','data-placement' => "right"}  %>
+      <%= f.input :key_pair_name, input_html: { id: 'graph-key-pair-name', title: 'The name of the key pair to login to your instances', rel: 'tooltip','data-placement' => "right"} %>
+      <%= f.input :security_group, input_html: { id: 'graph-security-group-name', title: 'Give a name for the security group.', rel: 'tooltip','data-placement' => "right"}%>
   </div>  
   <div class="modal-footer">  
     <%= f.button :submit, 'Save Environment', class: "btn btn-success graph-save-submit" %>
