--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,14 +1,5 @@
-<%= link_to "Visual Cloud", root_path, :class => 'brand' %>
+<a href='<%= root_path%>' class="brand">Visual Cloud <sup>beta</sup></a>
 <ul class="nav pull-right">
-  <% if user_signed_in? %>
-    <li>
-    <%= link_to 'Logout', destroy_user_session_path, :method=>'delete' %>        
-    </li>
-  <% else %>
-    <li>
-    <%= link_to 'Login', new_user_session_path %>  
-    </li>
-  <% end %>
   <% if user_signed_in? %>
     <li>
     <%= link_to 'Settings', edit_user_registration_path %>
@@ -16,6 +7,15 @@
   <% else %>
     <li>
     <%= link_to 'Sign Up', new_user_registration_path %>
+    </li>
+  <% end %>
+  <% if user_signed_in? %>
+    <li>
+    <%= link_to 'Logout', destroy_user_session_path, :method=>'delete' %>        
+    </li>
+  <% else %>
+    <li>
+    <%= link_to 'Login', new_user_session_path %>  
     </li>
   <% end %>
 </ul>
