--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -2,7 +2,10 @@
 <ul class="nav pull-right">
   <% if user_signed_in? %>
     <li>
-    <%= link_to 'Settings', edit_user_registration_path %>
+    <%= link_to 'My Projects', projects_path %>
+    </li>
+    <li>
+    <%= link_to 'My Account', edit_user_registration_path %>
     </li>
   <% else %>
     <li>
