displaying ip and dns

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -35,6 +35,8 @@ div.graph-draggables-dock {
 ._jsPlumb_connector { z-index:4; }
 ._jsPlumb_endpoint { z-index:5; }
 
+.fnt_size { font-size:16px;}
+
 /*
 .ubuntu-ec2-element {
   background-image:image-url('icons/ubuntu.png');
