--- a/app/views/environments/edit.html.erb
+++ b/app/views/environments/edit.html.erb
@@ -16,8 +16,8 @@
     var ypos = <%= instance.ypos %> ;
     var parents = <%= instance.parents.collect(&:id) %> ;
     var instanceId= <%= instance.id %>
-    var ipAddress = '<%= instance.private_ip %>';
-    var publicDNS = '<%= instance.public_dns %>';
+    var ipAddress = '<%= instance.private_ip.to_s %>';
+    var publicDNS = '<%= instance.public_dns.to_s %>';
     var amiId = <%= instance.ami_id.nil? ? 'null' : instance.ami_id %>;
     var instanceType = <%= instance.instance_type_id.nil? ? 'null' : instance.instance_type_id %>;
     var configAttributes = JSON.parse('<%= instance.config_attributes.html_safe %>');
