--- a/app/views/projects/_project_environments.html.erb
+++ b/app/views/projects/_project_environments.html.erb
@@ -16,10 +16,8 @@
         <td style="text-align: center;">
           <%= link_to 'Update', "javascript:void(0);",:class=>'btn btn-inverse save_env', id: "save_env_#{environment.id}"%>&nbsp;&nbsp;&nbsp;&nbsp;
           <%= link_to 'Edit', edit_project_environment_path(@project,environment),:class=>'btn btn-inverse' %>&nbsp;&nbsp;&nbsp;&nbsp;
-          <%= link_to 'Delete', project_environment_path(@project,environment),:class=>'btn btn-inverse', method: :delete, data: { confirm: 'Are you sure?' } %>&nbsp;&nbsp;&nbsp;&nbsp;
-    <%#if Deploy.find_all_by_environment_id(environment).present? && Deploy.find_all_by_environment_id(environment).order('created_at DESC').status %>
-          <%= link_to 'Deploy', project_environment_deployments_path(@project,environment) ,:class=>'btn btn-inverse', method: :post%></td>
-    <%#end%>
+          <%= link_to 'Delete', project_environment_path(@project,environment),:class=>'btn btn-inverse', method: :delete, data: { confirm: 'Are you sure?' } %>&nbsp;&nbsp;&nbsp;&nbsp;    
+          <%= link_to 'Deploy', project_environment_deployments_path(@project,environment) ,:class=>'btn btn-inverse', method: :post%></td>    
       </tr>
     <% end %>
   <%else%>
@@ -29,4 +27,23 @@
   <%end%>
 </table>
 <br />
-<%= link_to 'New Environment', new_project_environment_path(@project) ,:class=>"btn btn-inverse"%>
+<button class="btn btn-inverse" id="new_environment">New Environment</button>
+<div id="graph-new-modal" class="modal hide fade in" style="display: none; ">
+  <div class="modal-header">
+    <a class="close" data-dismiss="modal">×</a>
+    <h3>New Environment</h3>
+  </div>
+  <div class="modal-body">
+    <div id="graph-new-error-messages"></div>
+    <%= simple_form_for Environment.new, url: new_project_environment_path(@project) , html: { id: 'graph-new-frm'},:method => 'get' do |f|%>
+      <%= f.input :name, input_html: { id: 'graph-name', title: 'Name of your environment. Example: production, staging etc.', rel: 'tooltip','data-placement' => "right"}  %>
+      <%= f.input :key_pair_name, input_html: { id: 'graph-key-pair-name', title: 'The name of the key pair to login to your instances', rel: 'tooltip','data-placement' => "right"} %>
+      <%= f.input :security_group, input_html: { id: 'graph-security-group-name', title: 'Give a name for the security group.', rel: 'tooltip','data-placement' => "right"}%>
+  </div>
+  <div class="modal-footer">
+    <%= f.button :submit, 'Continue', class: "btn btn-success graph-new-submit" %>
+    <a href="#" class="btn btn-inverse" data-dismiss="modal">Close</a>
+  </div>
+    <% end %>
+</div>
+
