--- a/app/views/environments/_dialogs.html.erb
+++ b/app/views/environments/_dialogs.html.erb
@@ -1,7 +1,7 @@
 <!-- Save Environment -->
 <div id="graph-save-modal" class="modal hide fade in" style="display: none; ">  
   <div class="modal-header">  
-    <%#*<a class="close" data-dismiss="modal">×</a>%>
+    <a class="close" data-dismiss="modal">×</a>
     <h3>Save Environment</h3>
   </div>  
   <div class="modal-body">  
@@ -13,7 +13,7 @@
   </div>  
   <div class="modal-footer">  
     <%= f.button :submit, 'Save Environment', class: "btn btn-success graph-save-submit" %>
-    <%#*<a href="#" class="btn btn-inverse" data-dismiss="modal">Close</a>%>
+    <a href="#" class="btn btn-inverse" data-dismiss="modal">Close</a>
   </div>  
     <% end %>
 </div>  
